В случае исключений возвращаем HTTP коды отличные от 200